# Sudoku-Defense

./: Index.html  README.md  package-lock.json  package.json  vite.config.js
app/: index.html
app/art/: SudokuNumbers.pyxel
app/css/: steam-deck-layout.css  steam-deck.css  styles.css
app/data/: characters.json  enemies.json
app/js/: ability-system.js  board-manager.js  board-state.js  characters.js  completion-bonus.js  custom-font-manager.js  enemies.js  enhanced-tower-rotation.js  events.js  game.js  init.js  levels.js  main-ui-reframe.js  main.js  mission-control.js  mobile-orientation.js  path-generator.js  phase-manager.js  pixi-board.js  pixi-demo.js  pixi-renderer.js  player.js  puzzle-generator.js  (+12 more)
css/: styles.css
js/: ability-system.js  aggressive-tower-reset-fix.js  board-fix.js  board-manager.js  characters.js  completion-bonus.js  custom-font-manager.js  debug-tools.js  direct-render-fix.js  enemies.js  enemy-fix.js  enhanced-sudoku-fix.js  enhanced-tower-rotation.js  event-tracker.js  events.js  first-wave-fix.js  game.js  init.js  levels.js  phase-manager.js  player. js  player.js  save-system.js  stats-screen.js  streamlined-sudoku-fix.js  sudoku-compatibility.js  sudoku-completion-fix.js  sudoku. js  sudoku.js  tower-animations.js  tower-reset-fix.js  towers.js
src-tauri/: Cargo.toml  tauri.conf.json
steam_build/: app_build.vdf  depot_build_3721150.vdf
sudoku-defense/: package.json
test/: board-state.test.js  characters.test.js  events.test.js  path-generator.test.js  puzzle-generator.test.js  render-canvas.test.js  towers.test.js
(+24 files in other folders)
